admin/src/components/Sidenav/sidenav.scss
@use '../../scss/abstracts' as *;
@use '../../scss/layout/container' as *;
@use '../../scss/layout/spacing' as *;
@use '../../scss/layout/links' as *;
@use '../../scss/theme/colors' as *;

/*
 * Sidebar
 */

.sidebar {
	width: 314px;
	background-color: $white;
	padding: 0px rem(32);
	position: fixed;
	top: 81px;
	left: 0;
	bottom: 0;
	z-index: 100;

	.sidebar-wrapper {
		overflow: hidden;
		height: 100%;
		overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
		display: flex;
		flex-direction: column;
		padding: rem(24) 0px;
		@include hide-scrollbars();

		.sidebar-header {
			margin-bottom: $text-spacer;
		}

		.main-navigation,
		.secondary-navigation {
			padding: rem(23) 0px;
			border-top: border();
		}
	}

	.nav-item svg,
	.nav-link svg {
		margin-right: $gap;
		vertical-align: rem(-6);
	}

	.submenu {
		position: relative;
		display: flex;
		flex-direction: column;
		gap: $gap-xs;
		margin-top: rem(5);
		.nav-item {
			padding-left: rem(38);
		}

		&::before {
			content: '';
			position: absolute;
			margin-left: rem(26);
			width: 2px;
			height: 100%;
			background-color: #efefef;
		}
	}

	.nav-link,
	.btn-link,
	.btn-link:hover {
		padding: $nav-link-padding-y $nav-link-padding-x;
		font-weight: $fw-medium;
		color: $body-color;
		line-height: 24px;

		&:hover,
		&.active {
			@include hover-effect();
		}
	}

	#settings-menu {
		.nav-link {
			display: flex;
			align-items: center;
			&::after {
				line-height: 0;
				content: url("data:image/svg+xml,%3Csvg width='14' height='8' viewBox='0 0 14 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.70711 0.292893C1.31658 -0.0976311 0.683417 -0.0976311 0.292893 0.292893C-0.0976311 0.683417 -0.0976311 1.31658 0.292893 1.70711L1.70711 0.292893ZM7 7L6.29289 7.70711C6.68342 8.09763 7.31658 8.09763 7.70711 7.70711L7 7ZM13.7071 1.70711C14.0976 1.31658 14.0976 0.683417 13.7071 0.292893C13.3166 -0.0976311 12.6834 -0.0976311 12.2929 0.292893L13.7071 1.70711ZM0.292893 1.70711L6.29289 7.70711L7.70711 6.29289L1.70711 0.292893L0.292893 1.70711ZM7.70711 7.70711L13.7071 1.70711L12.2929 0.292893L6.29289 6.29289L7.70711 7.70711Z' fill='%236F767E'/%3E%3C/svg%3E%0A");
				margin-left: auto;
				transform: rotate(-90deg);
				vertical-align: middle;
			}
		}
	}
}

